src/test/ui/parser/attr-bad-meta-2.rs
#[path =] //~ ERROR expected a literal or ::-separated path
mod m {}
